plugins {
    alias(libs.plugins.spring.boot)            apply false
    alias(libs.plugins.spring.dependency.mgmt) apply false
    alias(libs.plugins.spring.cloud.contract)  apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group   = 'com.finsight'
    version = '0.1.0-SNAPSHOT'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.3"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
        }
    }

    configurations.configureEach {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }

    dependencies {
        compileOnly         libs.lombok
        annotationProcessor libs.lombok
        annotationProcessor libs.mapstruct

        implementation 'com.fasterxml.jackson.core:jackson-databind'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation libs.testcontainers.kafka
        testImplementation libs.testcontainers.mongodb
    }

    test {
        useJUnitPlatform()
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }
}